13 November 2019: Wouter
	- iana portlist updated.

11 November 2019: Wouter
	- Fix #109: check number of arguments for stdin-pipes in
	  unbound-control and fail if too many arguments.
	- Merge #102 from jrtc27: Add getentropy emulation for FreeBSD.

24 October 2019: Wouter
	- Fix #99: Memory leak in ub_ctx (event_base will never be freed).

23 October 2019: George
	- Add new configure option `--enable-fully-static` to enable full static
	  build if requested; in relation to #91.

23 October 2019: Wouter
	- Merge #97: manpage: Add missing word on unbound.conf,
	  from Erethon.

22 October 2019: Wouter
	- drop-tld.diff: adds option drop-tld: yesno that drops 2 label
	  queries, to stop random floods.  Apply with
	  patch -p1 < contrib/drop-tld.diff and compile.
	  From Saksham Manchanda (Secure64).  Please note that we think this
	  will drop DNSKEY and DS lookups for tlds and hence break DNSSEC
	  lookups for downstream clients.

7 October 2019: Wouter
	- Add doxygen comments to unbound-anchor source address code, in #86.

3 October 2019: Wouter
	- Merge #90 from vcunat: fix build with nettle-3.5.
	- Merge 1.9.4 release with fix for vulnerability CVE-2019-16866.
	- Continue with development of 1.9.5.
	- Merge #86 from psquarejho: Added -b source address option to
	  smallapp/unbound-anchor.c, from Lukas Wunner.

26 September 2019: Wouter
	- Merge #87 from hardfalcon: Fix contrib/unbound.service.in,
	  Drop CAP_KILL, use + prefix for ExecReload= instead.

25 September 2019: Wouter
	- The unbound.conf includes are sorted ascending, for include
	  statements with a '*' from glob.

23 September 2019: Wouter
	- Merge #85 for #84 from sam-lunt: Add kill capability to systemd
	  service file to fix that systemctl reload fails.

20 September 2019: Wouter
	- Merge #82 from hardfalcon: Downgrade CAP_NET_ADMIN to CAP_NET_RAW
	  in unbound.service.
	- Merge #81 from Maryse47: Consistently use /dev/urandom instead
	  of /dev/random in scripts and docs.